--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,10 @@
           <a href="#">Appium Node <span class="menu-icon fa fa-tachometer"></span></a>
         </li>
         <li class="sidebar-list">
-          <a href="#/tables">Appium Server <span class="menu-icon fa fa-table"></span></a>
+          <a href="#/tables">Appium Server <span class="menu-icon fa"></span></a>
+        </li>
+        <li class="sidebar-list">
+          <a href="#/admin">Admin<span class="menu-icon fa"></span></a>
         </li>
       </ul>
       <div class="sidebar-footer">
@@ -51,50 +54,9 @@
             <div class="user pull-right">
               <div class="item dropdown">
                 <a href="#" class="dropdown-toggle">
-                  <img src="img/avatar.jpg">
-                </a>
-                <ul class="dropdown-menu dropdown-menu-right">
-                  <li class="dropdown-header">
-                    Joe Bloggs
-                  </li>
-                  <li class="divider"></li>
-                  <li class="link">
-                    <a href="#">
-                      Profile
-                    </a>
-                  </li>
-                  <li class="link">
-                    <a href="#">
-                      Menu Item
-                    </a>
-                  </li>
-                  <li class="link">
-                    <a href="#">
-                      Menu Item
-                    </a>
-                  </li>
-                  <li class="divider"></li>
-                  <li class="link">
-                    <a href="#">
-                      Logout
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="item dropdown">
-               <a href="#" class="dropdown-toggle">
-                  <i class="fa fa-bell-o"></i>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-right">
-                  <li class="dropdown-header">
-                    Notifications
-                  </li>
-                  <li class="divider"></li>
-                  <li>
-                    <a href="#">Server Down!</a>
-                  </li>
-                </ul>
-              </div>
+                  <img src="img/appium.png">
+                </a>                
+              </div>              
             </div>
             <div class="meta">
               <div class="page">
